--- a/Wox.Plugin.LastPass/Wox.Plugin.1Password.csproj
+++ b/Wox.Plugin.LastPass/Wox.Plugin.1Password.csproj
@@ -91,9 +91,14 @@
     <Compile Include="Models\ClientInfo.cs" />
     <Compile Include="Models\ExecutionResult.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="Models\Field.cs" />
+    <Compile Include="Models\PasswordDetails.cs" />
     <Compile Include="Models\Platform.cs" />
+    <Compile Include="Models\Section.cs" />
     <Compile Include="Models\Ui.cs" />
-    <Compile Include="OnePassword.cs" />
+    <Compile Include="Models\Url.cs" />
+    <Compile Include="Models\Vault.cs" />
+    <Compile Include="OnePasswordManager.cs" />
     <Compile Include="Models\OnePasswordDocument.cs" />
     <Compile Include="Models\OnePasswordItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -111,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="exampleOnePasswordDetailedItem.json" />
     <None Include="exampleOnePasswordItem.json" />
     <None Include="packages.config" />
     <None Include="plugin.json">
