--- a/Wox.Plugin.LastPass/packages.config
+++ b/Wox.Plugin.LastPass/packages.config
@@ -3,6 +3,15 @@
   <package id="CliWrap" version="3.5.0" targetFramework="net461" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net461" />
+  <package id="NUnit" version="3.13.3" targetFramework="net461" />
+  <package id="NUnit.Console" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.15.2" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.7" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit.Runners" version="3.12.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.5" targetFramework="net461" />
